# simple_and_test

./: .gitignore  LICENSE  README.md  settings.gradle.kts
3rd_import/: README.md  build.gradle.kts
3rd_import/src/main/cpp/: CMakeLists.txt  third_import.cpp
3rd_import/src/main/cpp/import_lib/: CMakeLists.txt  ImportSimple.cpp
3rd_import/src/main/cpp/import_lib/libs/include/: SimpleThirdLib.h
3rd_import/src/main/cpp/source_lib/: CMakeLists.txt  SimpleThirdLib.cpp
3rd_import/src/main/java/com/example/a3rd_import/: MainActivity.kt
3rd_import/src/main/res/values/: strings.xml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
biometric/: build.gradle.kts
biometric/src/main/: AndroidManifest.xml
camera/: build.gradle.kts
camera/src/main/: AndroidManifest.xml
cmake/: vcpkg.cmake
config_build_variants/: README.md  build.gradle.kts
config_build_variants/src/demo/java/: BuildInfoDemo.kt
config_build_variants/src/full/java/: BuildInfoDemo.kt
config_build_variants/src/main/: AndroidManifest.xml
config_build_variants/src/main/cpp/: CMakeLists.txt  config_build_variants.cpp
config_build_variants/src/main/cpp/mycpp/: CMakeLists.txt  MyClass.cpp  MyClass.h
config_build_variants/src/main/res/values/: strings.xml
cpp_module/: CMakeLists.txt  README.md  build.gradle.kts  test.cpp  vcpkg.json
cpp_module/os_learn/: CMakeLists.txt  sys_func.cpp
cpp_module/stl_learn/: CMakeLists.txt  concurrency.cpp  language.cpp  metaprogramming.cpp  stl_learn.cpp
demo_vcpkg/: build.gradle.kts
demo_vcpkg/src/main/cpp/: CMakeLists.txt  vcpkg.json
demo_vcpkg/src/main/cpp/cmake/: vcpkg.cmake
demo_vcpkg/src/main/cpp/terminal/: main.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
host_cmake_project/: CMakeLists.txt
jni_learn/: README.md  build.gradle.kts
jni_learn/src/main/cpp/: CMakeLists.txt  JNICPP.cpp  JNICPP.h  jni_learn.cpp  jni_learn_shared.cpp
jni_learn/src/main/res/values/: strings.xml  themes.xml
scripts/: proxy.sh
terminal/: README.md  build.gradle.kts
terminal/src/main/cpp/: terminal.cpp
third_import/: build.gradle.kts
third_import/src/main/cpp/import_lib/: ImportSimple.h  test_import.cpp
vcpkg/: README.md
vcpkg/src/main/cpp/: CMakeLists.txt  demo_vcpkg.cpp
vcpkg/src/main/cpp/scripts/: proxy.sh
vcpkg/src/main/cpp/terminal/: CMakeLists.txt
(+45 files in other folders)
